# atusbprog

./: .gitignore  README.md
fw/: .cproject  .project  atusbprog.hwconf
fw/inc/: InitDevice.h  atusbprog_proto.h  debug_uart.h  descriptors.h  sys_timer.h
fw/inc/config/: efm8_config.h  usbconfig.h
fw/inc_common/: README.md  atusbprog_proto.h
fw/lib/efm8_usb/: Readme.txt
fw/lib/efm8_usb/inc/: efm8_usb.h
fw/lib/efm8_usb/src/: efm8_usbd.c  efm8_usbdch9.c  efm8_usbdint.c
fw/src/: InitDevice.c  Interrupts.c  atusbprog_main.c  callback.c  debug_uart.c  descriptors.c  sys_timer.c
hw/kicad/atusbprog/: atusbprog-cache.lib  atusbprog.dcm  atusbprog.kicad_pcb  atusbprog.lib  atusbprog.pro  atusbprog.sch  sym-lib-table
hw/kicad/atusbprog/gerbers/: atusbprog-B_Cu.gbr  atusbprog-B_Mask.gbr  atusbprog-B_Paste.gbr  atusbprog-B_SilkS.gbr  atusbprog-Edge_Cuts.gbr  atusbprog-F_Cu.gbr  atusbprog-F_Mask.gbr  atusbprog-F_Paste.gbr  atusbprog-F_SilkS.gbr  atusbprog.drl
sw_host/: CMakeLists.txt
sw_host/linux/: CMakeLists.txt
sw_host/linux/src/: device.h  main.c
sw_host/src/: cmdline.c  cmdline.h  devices.h  main.c
sw_host/udev/: 99-atusbprog.rules
